# tax-calculator-ai-mcp

./: .mcp.json  README.md  glama.json  package.json  pyproject.toml  server.py  smithery.yaml
.well-known/mcp/: server-card.json
tax_calculator_ai_mcp/: server.py
