[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tax-calculator-ai-mcp"
version = "0.1.0"
description = "Estimate income tax liability across multiple jurisdictions with support for brackets, deductions, and effective rate calculations."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
tax_calculator_ai_mcp = "tax_calculator_ai_mcp.server:main"
